# MInference

./: .gitignore  123.py  Makefile  main.py  pyproject.toml
LeanK/: README.md
csrc/: vertical_slash_index.cu
minference/: __init__.py  models_patch.py  patch.py
minference/modules/: minference_forward.py
minference/ops/: flash_attn_triton.py  pit_sparse_flash_attention_v2.py
