[build-system]
# We added torch, packaging, and ninja here because your build 
# script (setup.py) needs to import them to run.
requires = [
    "setuptools>=61.0", 
    "wheel", 
    "torch>=2.0.0", 
    "packaging", 
    "ninja"
]
build-backend = "setuptools.build_meta"

[project]
name = "MInference"
version = "0.1.0"
description = "Project with torch and system utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "you@example.com"}
]

# These remain here so they are also available when running your code
dependencies = [
    "torch>=2.0.0",
    "packaging",
    "psutil",
    "ninja",
    "vllm>=0.13.0",
]

[tool.setuptools]
packages = {find = {}}
